# ungoogled-chromium-android

./: .build_config  .gclient  CHANGELOG.md  LICENSE  LICENSE.md  README.md  SUPPORT.md  android_flags.debug.gn  android_flags.gn  android_flags.release.gn  binary_dependencies  build.sh  bundle_generate_apk.sh  domain_sub_2.list  download_file_types.pb.h  keystore_dummy.gn  pruning_2.list  trichrome_generate_apk.sh
.gitea/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-chrome-arm64.yml  build-monochrome-arm.yml  build-webview.yml  build.yml  dispatch-request.sh
androidx-override/: core-release.aar  core_core.patch
misc/: UnindexedRules  aidl  android_studio_setup.sh  misc.sh
patches/: aapt2-param.patch  android-prune-domain-fix.patch  android-prune-fix.patch  change_package_name.patch  debug-disable-fatal-checks.patch  debug-fix.patch  generate_gradle.patch  ignore-aidl-assertion-error.patch  linker-android-support-remove.patch  ndk-native-window.patch  remove-jdk.patch  series  series_extensions  ungoogled-main-repo-fix.patch
patches/Bromite/: AImageReader-CFI-crash-mitigations.patch  Add-a-proxy-configuration-page.patch  Add-an-always-incognito-mode.patch  Add-bookmark-import-export-actions.patch  Add-exit-menu-item.patch  Add-flag-to-disable-WebGL.patch  Add-flags-to-disable-device-motion-and-orientation-APIs.patch  Add-flags-to-disable-device-motion-orientation-APIs.patch  Add-option-to-not-persist-tabs-across-sessions.patch  Add-option-to-use-home-page-as-NTP.patch  Add-user-setting-for-DNS-over-HTTPS-DoH-custom-URL.patch  Change-default-webRTC-policy-to-not-use-any-address.patch  Disable-AImageReader-for-ARM64-P-and-ARM64-Q.patch  Disable-DRM-media-origin-IDs-preprovisioning.patch  DoH-secure-mode-by-default.patch  Download-on-Android-Q-Remove-a-DCHECK-in-CreateReservation.patch  Inject-scripts-for-AMP-tracking-ads-and-video.patch  Remove-SMS-integration.patch  Remove-account-permissions-from-manifest.patch  Revert-flags-remove-disable-pull-to-refresh-effect.patch  Use-a-minimum-DoH-timeout-of-400ms.patch  updater-disable-updater-pings.patch
patches/Extensions/: add-api-os-android.patch  add-chromium-webstore-extension.patch  add-extension-menu-items.patch  allow-select-folder.patch  crx-download-install-prompt.patch  extension-system-delayed-reload.patch  fix-extension-remove-button.patch  gn.patch  open-setting-in-new-tab.patch  profile-extra-parts-init.patch  res.patch  src.patch  tab-api-fix.patch
patches/Kiwi/: 0001-Kiwi-Introduce-extensions-support-R80.patch  gn.patch  res.patch  src.patch
patches/Other/: Fix-Note9-startup-crash.patch  debug-fix.patch  eu-strip-build-script.patch  generate_gradle.patch  gs-download-use-normal-python.patch  ignore-aidl-assertion-error.patch  python3-dict-changed-size-during-iteration.patch  remove-jdk.patch  ungoogled-main-repo-fix.patch
patches/Unobtainium/: kill-Auth.patch  kill-GCM.patch  kill-Location-fall-back-to-system.patch  kill-TOS-and-metrics-opt-out.patch  kill-Translate.patch  kill-Vision.patch
patches/Vanadium/: 0003-switch-to-fstack-protector-strong.patch  0004-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0016-disable-seed-based-field-trials.patch  0017-disable-fetching-variations.patch  0018-disable-WebView-variations-support.patch  0020-disable-media-router-media-remoting-by-default.patch  0021-disable-media-router-by-default.patch  0021-disable-metrics-by-default.patch  0022-disable-metrics-by-default.patch  0023-disable-showing-popular-sites-by-default.patch  0031-disable-media-router-media-remoting-by-default.patch  0032-disable-media-router-by-default.patch  0033-disable-media-router-media-remoting-by-default.patch  0034-disable-media-router-by-default.patch  0042-enable-user-agent-freeze-by-default.patch  0043-enable-split-cache-by-default.patch  0044-enable-partitioning-connections-by-default.patch  0050-enable-strict-site-isolation-by-default-on-Android.patch  0054-always-use-local-new-tab-page.patch  0077-disable-using-Play-services-fonts.patch
patches/src-fix/: android-rlz-fix-missing-variable.patch  clang-unknown-warnings.patch  fix-base-feature.patch  fix-clang-options.patch  fix-closure-compiler-minify-error.patch  fix-prefs.patch  (+14 more)
safe_browsing_proto_files/: download_file_types.pb.h  webprotect.pb.h
(+61 files in other folders)
