blink_symbol_level=1
clang_use_chrome_plugins=false
closure_compile=false
enable_ac3_eac3_audio_demuxing=true
enable_hangout_services_extension=false
enable_hevc_demuxing=true
enable_iterator_debugging=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_swiftshader=false
enable_widevine=true
exclude_unwind_tables=true
fatal_linker_warnings=false
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
is_debug=true
is_official_build=false
optimize_webui=false
safe_browsing_mode=0
symbol_level=1
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
android_channel="stable"
android32_ndk_api_level=21
android64_ndk_api_level=21
android_ndk_root = "//../android-ndk/android-ndk-r18b"
android_ndk_version = "r18b"
android_ndk_major_version = 18
android_sdk_build_tools_version="27.0.3"
android_sdk_tools_version_suffix="-26.2.0-dev"
android_sdk_version=28
clang_base_path="/usr"
disable_android_lint=true
enable_gvr_services=false
enable_resource_whitelist_generation=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
target_os="android"
target_cpu="arm64"
use_jumbo_build=true
use_lld=true
use_sysroot=false
