blink_symbol_level=2
clang_use_chrome_plugins=false
closure_compile=false
dfmify_dev_ui=false
disable_autofill_assistant_dfm=true
disable_tab_ui_dfm=true
enable_hangout_services_extension=false
enable_iterator_debugging=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_swiftshader=false
enable_widevine=true
exclude_unwind_tables=false
fatal_linker_warnings=false
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
is_component_build=true
is_debug=true
is_official_build=false
java_warnings_as_errors=false
optimize_webui=false
proprietary_codecs=true
safe_browsing_mode=0
symbol_level=2
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
