android_channel="stable"
android_ndk_root = "//third_party/android_ndk"
android_ndk_version = "r20b"
android_ndk_major_version = 20
android_sdk_build_tools_version="30.0.1"
android_sdk_version=30
cc_wrapper="ccache"
clang_base_path="/usr"
disable_android_lint=true
enable_extensions=true
enable_gvr_services=false
enable_supervised_users=false
exclude_unwind_tables=false
ffmpeg_branding="Chrome"
is_clang=true
rtc_build_examples=false
target_os="android"
use_gnome_keyring=false
use_sysroot=false
